--- a/action.yml
+++ b/action.yml
@@ -27,3 +27,4 @@ runs:
         INPUT_TARGET_USERNAME: ${{ inputs.target-username }}
         INPUT_TARGET_TOKEN: ${{ inputs.target-token }}
         GITHUB_EVENT_REF: ${{ github.event.ref }}
+        GITHUB_REF_NAME: ${{ github.ref.name }}
